# unicatech

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TO DO.odt  Unicatech.txt  build.sh  docker-compose.yml  gitignore  manage.py  pyproject.toml  requirements.txt  unicatech-db.txt  unicatech-db.txt~  unicatech-docker.pem  unicatech_compras.txt
.github/workflows/: deploy-pr.yaml
Cadastro/: models.py  urls.py  views.py
Compras/: models.py  urls.py  views.py
Compras/migrations/: 0001_initial.py  0002_alter_compra_produto.py  0003_fornecedor_alter_compra_fornecedor.py  0003_remove_compra_fornecedor.py  0004_compra_fornecedor.py  0004_compra_remover.py  0005_remove_compra_remover.py  0006_alter_compra_conta.py  0007_alter_compra_conta.py  0008_compra_valordolarmedio.py  0009_alter_compra_quantidadeproduto.py  0010_fornecedor_localizacaocompra.py  0011_deslocamento.py  0012_alter_deslocamento_identificadorcompra.py  0013_deslocamento_idmovimentacaoconta.py  0014_alter_localizacaocompra_id.py  0015_alter_deslocamento_destino_alter_deslocamento_origem.py  0016_alter_deslocamento_idmovimentacaoconta.py
Contas/: apps.py  models.py  urls.py  views.py
Contas/migrations/: 0001_initial.py  (+16 more)
Despesas/: apps.py  models.py  urls.py  views.py
Produtos/: models.py  urls.py  views.py
Relatorios/: admin.py  apps.py  models.py  urls.py  views.py
Vendas/: models.py  urls.py  views.py
core/: models.py  urls.py  views.py
djangoPostgres/: manage.py
nginx/: nginx.conf  nginx.conf~
unicatech/: asgi.py  settings.py  urls.py  wsgi.py
(+253 files in other folders)
