[tool.poetry]
name = "unicatech"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.6.0"
bootstrap4 = "0.1.0"
dj-static = "0.0.6"
django = "4.1.5"
django-stdimage = "6.0.1"
gunicorn = "20.1.0"
pillow = "9.4.0"
poetry = "1.4.2"
psycopg2-binary = "2.9.5"
sqlparse = "0.4.3"
static3 = "0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=7"
pre-commit = ">=3"
python-dotenv = "*"
pydantic = ">=1"
python-crontab = ">=2"
decorator = ">=5"
humanize = ">=4"
pyyaml = ">=6.0"
types-retry = "^0.9.9.2"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"

[tool.isort]
profile = "black"
force_single_line = false
atomic = true
lines_after_imports = 2
lines_between_types = 1
line_length = 120

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = '--cov-fail-under=90 --cov-report html --ignore=djangoPostgres --ignore=core/migrations'


[tool.coverage.run]
omit = ["djangoPostgres", "core/migrations"]

#[tool.mypy]
#exclude = ["djangoPostgres", "core/migrations"]
#check_untyped_defs = true
#disallow_untyped_defs = true
